complete , irresponsive,no backend

--- a/index.html
+++ b/index.html
@@ -15,12 +15,17 @@
         rel="stylesheet">
     <!-- boxicon link -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <!-- logo -->
+    <link rel="stylesheet" href="favicon.ico">
 </head>
 
 <body>
     <!-- --------------------------Create a Navbar-------------------------- -->
     <header class="header">
-        <a href="/" class="Logo">Portfolio</a>
+        <div class="logo-box">
+            <a href="/"><img src="favicon.ico" alt=""></a>
+            <a href="/" class="Logo">Ishan Hegde</a>
+        </div>
         <i class='bx bx-menu' id="menu"></i>
         <nav class="navbar">
             <a href="#home" style="--clr:1" class="active">Home</a>
@@ -36,13 +41,14 @@
             <h3>Hello folks,I'm</h3>
             <h1>Ishan Hegde</h1>
             <h3>And I'm an aspiring <span class="textline"></span></h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque fugiat ducimus nisi odio praesentium
-                perferendis delectus dolorum animi repudiandae tempora! Tempore, aliquid suscipit. Sint aliquid aliquam
-                quod maiores iusto eum.</p>
+            <p> I'm a software developer with over a year of experience in Web development. I am passionate about
+                building user-friendly and efficient web applications. I have a proven track record of success in
+                delivering high-quality products on time and within budget.
+            </p>
             <div class="social-media">
-                <a href="#"><i class='bx bxl-instagram'></i></a>
-                <a href="#"><i class='bx bxl-twitter'></i></a>
-                <a href="#"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://instagram.com/ishan.hegde?igshid=MzMyNGUyNmU2YQ=="><i class='bx bxl-instagram'></i></a>
+                <a href="https://twitter.com/ishan_hegde"><i class='bx bxl-twitter'></i></a>
+                <a href="https://www.linkedin.com/in/ishan-hegde-753947288/"><i class='bx bxl-linkedin'></i></a>
             </div>
             <a class="resume"
                 href="https://drive.google.com/drive/folders/1y-czppmBmvYFJ5sHursWwR1-nCktCi-f?usp=sharing">
@@ -406,11 +412,7 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="home-img">
-            <img src="home-image.png" alt="">
-        </div> -->
     </section>
-
 
     <!-- --------------------------Create an About-Section-------------------------- -->
     <section class=" about" id="about">
@@ -420,11 +422,15 @@
         <div class="about-section">
             <h2 class="allheading">About <span>Me</span></h2>
             <h3>Frontend Developer</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus laudantium molestiae corporis
-                iste
-                nemo amet, commodi officia temporibus perferendis tempora, voluptates, id deserunt illo facere
-                earum
-                laborum labore dicta veniam!</p>
+            <p>Seeking a software development role where I can use my skills in C++, Python, HTML, CSS, JavaScript,
+                React, and Java to build innovative and user-friendly products as part of a growing and learning team.
+                Pursuing engineering has helped me gain a strong foundation in computer science fundamentals and
+                software engineering best practices.I have also developed experience with a variety of programming
+                languages and technologies, including those listed above. As a front-end developer, I have experience
+                building and maintaining web applications using JS. I am also skilled in HTML, CSS, and JavaScript, and
+                I have a strong understanding of user experience (UX) and user interface (UI) design. I am eager to
+                excel as a software developer, and I am hopeful that I can make a significant contribution to any team.
+                I am also a team player and I am always willing to go the extra mile to help my team succeed.</p>
             <a href="#" class="btn">Read More</a>
         </div>
     </section>
@@ -438,43 +444,34 @@
                 <i class='bx bx-code-alt'></i>
                 <h3>Web Development Intern</h3>
                 <h4>Bharat Intern | Sept - Oct 2023</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, asperiores fugiat amet sed
-                    incidunt,
-                    saepe
-                    temporibus modi dolor magnam distinctio vitae exercitationem illum molestiae qui est
-                    soluta
-                    minus
-                    dicta
-                    inventore?</p>
-                <a href="#" class="btn">Read more</a>
+                <p>Interned at Bharat Intern as a Junior Web Developer.
+                    Completed 2 tasks during my time as an intern.
+                </p>
+                <a href="https://github.com/Ishan-Hegde/Portfolio_Netlify.git" class="btn"> Read more</a>
             </div>
             <div class="experience-box">
                 <i class='bx bxl-meta'></i>
                 <h3>Social Media Manager Intern</h3>
                 <h4>Derest Marketing | Feb 2022 - June 2022</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, asperiores fugiat amet sed
-                    incidunt,
-                    saepe
-                    temporibus modi dolor magnam distinctio vitae exercitationem illum molestiae qui est
-                    soluta
-                    minus
-                    dicta
-                    inventore?</p>
-                <a href="#" class="btn">Read more</a>
+                <p>
+                    Developed marketing content such as blogs, promotional materials,
+                    and advertisements for social media. Monitored online presence of
+                    company's brand to engage with users and strengthen customer
+                    relationships.
+                </p>
+                <a href="https://www.linkedin.com/company/derest/about/" class="btn">Read more</a>
             </div>
             <div class="experience-box">
                 <i class='bx bx-data'></i>
                 <h3>Documentation In-Charge</h3>
                 <h4>Students' Council of Fr.CRCE | Aug 2022- Aug 2023</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, asperiores fugiat amet sed
-                    incidunt,
-                    saepe
-                    temporibus modi dolor magnam distinctio vitae exercitationem illum molestiae qui est
-                    soluta
-                    minus
-                    dicta
-                    inventore?</p>
-                <a href="#" class="btn">Read more</a>
+                <p>Delivered services to customer locations within specific timeframes.
+                    Worked at major Technical events throughout my course of being a
+                    member.
+                    Developed strong organizational and communication skills through
+                    coursework and volunteer activities.</p>
+                <a href="https://www.linkedin.com/school/fr.-conceicao-rodrigues-college-of-engineering/"
+                    class="btn">Read more</a>
             </div>
         </div>
     </section>
@@ -487,77 +484,52 @@
                 <img src="lap.webp" alt="">
                 <div class="projects-head">
                     <h4>Temperature Converter</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut repudiandae quos
-                        voluptates,
-                        consequuntur itaque sint aut, illo iusto fugiat blanditiis dolorem rem tempore
-                        repellendus
-                        maiores
-                        tempora quam repellat ad eos!</p>
+                    <p>
+                        One of my tasks while interning at Bharat Intern. It is a temperature converter from Celsius to
+                        Fahrenheit and Fahrenheit to Celsius as well.
+                    </p>
+                    <a href="https://github.com/Ishan-Hegde/BI_Temperature-Converter"><i
+                            class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="projects-box">
+                <img src="lap.webp" alt="">
+                <div class="projects-head">
+                    <h4>Exam Portal</h4>
+                    <p>Exam Portal for my college's Electronics and Computer Science branch.</p>
+                    <a href="https://github.com/Ishan-Hegde/ECS-ExamPortal"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="projects-box">
+                <img src="lap.webp" alt="">
+                <div class="projects-head">
+                    <h4>Fahrenheit and Kelvin to Celsius</h4>
+                    <p>Converting temperature from Fahrenheit and Kelvin to Celcsius.</p>
+                    <a href="https://github.com/Ishan-Hegde/Fahrenheit-and-Kelvin-to-Celsius"><i
+                            class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="projects-box">
+                <img src="lap.webp" alt="">
+                <div class="projects-head">
+                    <h4>Coming Soon!</h4>
+                    <p>Coming Soon!Coming Soon!</p>
                     <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="projects-box">
                 <img src="lap.webp" alt="">
                 <div class="projects-head">
-                    <h4>Temperature Converter</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut repudiandae quos
-                        voluptates,
-                        consequuntur itaque sint aut, illo iusto fugiat blanditiis dolorem rem tempore
-                        repellendus
-                        maiores
-                        tempora quam repellat ad eos!</p>
+                    <h4>Coming Soon!</h4>
+                    <p>Coming Soon!Coming Soon!</p>
                     <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="projects-box">
                 <img src="lap.webp" alt="">
                 <div class="projects-head">
-                    <h4>Temperature Converter</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut repudiandae quos
-                        voluptates,
-                        consequuntur itaque sint aut, illo iusto fugiat blanditiis dolorem rem tempore
-                        repellendus
-                        maiores
-                        tempora quam repellat ad eos!</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-            <div class="projects-box">
-                <img src="lap.webp" alt="">
-                <div class="projects-head">
-                    <h4>Temperature Converter</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut repudiandae quos
-                        voluptates,
-                        consequuntur itaque sint aut, illo iusto fugiat blanditiis dolorem rem tempore
-                        repellendus
-                        maiores
-                        tempora quam repellat ad eos!</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-            <div class="projects-box">
-                <img src="lap.webp" alt="">
-                <div class="projects-head">
-                    <h4>Temperature Converter</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut repudiandae quos
-                        voluptates,
-                        consequuntur itaque sint aut, illo iusto fugiat blanditiis dolorem rem tempore
-                        repellendus
-                        maiores
-                        tempora quam repellat ad eos!</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-            <div class="projects-box">
-                <img src="lap.webp" alt="">
-                <div class="projects-head">
-                    <h4>Temperature Converter</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut repudiandae quos
-                        voluptates,
-                        consequuntur itaque sint aut, illo iusto fugiat blanditiis dolorem rem tempore
-                        repellendus
-                        maiores
-                        tempora quam repellat ad eos!</p>
+                    <h4>Coming Soon!</h4>
+                    <p>Coming Soon!Coming Soon!</p>
                     <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
