--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Ishan Hegde's Portfolio. I am in my Third Year of graduation under the course of B.E.Electronics and Computer Science. I am an aspiring MERN stack developer and I am also currently a Semi-Professional Footballer for Young Guns Football Club playing MFA Super Division.">
+    <meta name="description"
+        content="Ishan Hegde's Portfolio. I am in my Third Year of graduation under the course of B.E.Electronics and Computer Science. I am an aspiring MERN stack developer and I am also currently a Semi-Professional Footballer for Young Guns Football Club playing MFA Super Division.">
     <title>Ishan Hegde | Portfolio</title>
     <!-- css -->
     <link rel="stylesheet" href="style.css">
@@ -14,6 +15,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,700;1,600&display=swap"
         rel="stylesheet">
+    <!-- bootstrap css-->
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> -->
+    <!-- bootstrap js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
     <!-- boxicon link -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- logo -->
