--- a/index.html
+++ b/index.html
@@ -75,9 +75,10 @@
             <div class="background-circle">
                 <div class="triangle-light"></div>
                 <div class="body"></div>
-                <span class="shirt-text"><</span>
-                <span class="shirt-text">/</span>
-                <span class="shirt-text">></span>
+                <span class="shirt-text">
+                    < </span>
+                        <span class="shirt-text">/</span>
+                        <span class="shirt-text">></span>
             </div>
             <div class="head">
                 <div class="ear" id="left"></div>
