--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <div class="experience-box">
                 <i class='bx bx-code-alt'></i>
                 <h3>Web Development Intern</h3>
-                <h4>Bharat Intern | Sept - Oct 2023</h4>
+                <h4>Bharat Intern | Sept 2023 - Oct 2023</h4>
                 <p>Interned at Bharat Intern as a Junior Web Developer.
                     Completed 2 tasks during my time as an intern.
                 </p>
