--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         content="Ishan Hegde's Portfolio. I am in my Third Year of graduation under the course of B.E.Electronics and Computer Science. I am an aspiring MERN stack developer and I am also currently a Semi-Professional Footballer for Young Guns Football Club playing MFA Super Division.">
     <title>Ishan Hegde | Portfolio</title>
     <!-- css -->
-    <link rel="stylesheet" href="style_readable.css">
+    <link rel="stylesheet" href="style.css">
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -143,7 +143,8 @@
                 <p>Interned at Bharat Intern as a Junior Web Developer.
                     Completed 2 tasks during my time as an intern.
                 </p>
-                <a href="https://github.com/Ishan-Hegde/Portfolio_Netlify.git" class="btn"> Read more</a>
+                <a href="https://www.linkedin.com/in/ishan-hegde-753947288/recent-activity/all/" class="btn"> Read
+                    more</a>
             </div>
             <div class="experience-box">
                 <i class='bx bxl-meta'></i>
@@ -263,7 +264,7 @@
     <!-- email script link-->
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <!-- script link -->
-    <script src="app_readable.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
