--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="swyfCSBcf3MSr5O7s6Z-uTng9RdQDo2VQpuPYm9AImc" />
     <meta name="description"
         content="Ishan Hegde's Portfolio. I am in my Third Year of graduation under the course of B.E.Electronics and Computer Science. I am an aspiring MERN stack developer and I am also currently a Semi-Professional Footballer for Young Guns Football Club playing MFA Super Division.">
     <title>Ishan Hegde | Portfolio</title>
