--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
             <h3>Hello folks,I'm</h3>
             <h1>Ishan Hegde</h1>
             <h3>And I'm an aspiring <span class="textline"></span></h3>
-            <p> I'm a software developer with over a year of experience in Web development. I am passionate about
-                building user-friendly and efficient web applications. I have a proven track record of success in
-                delivering high-quality products on time and within budget.
+            <p> Web Application Software Developer with over a year of hands-on experience in C++, Flutter, Dart, React.js, and SQL.
+I have a strong foundation in dedication to quality and innovation, delivering scalable solutions, and technical report
+writing. I am passionate about developing software that positively impacts and drives meaningful change. With a
+demonstrated ability to innovate and manage diverse tasks, I strive to contribute to projects that address real-world
+issues and create lasting benefits.
             </p>
             <div class="social-media">
                 <a href="https://github.com/Ishan-Hegde"><i class='bx bxl-github'></i></a>
