--- a/index.html
+++ b/index.html
@@ -120,15 +120,14 @@
         </div>
         <div class="about-section">
             <h2 class="allheading">About <span>Me</span></h2>
-            <h3>Frontend Developer</h3>
-            <p>Seeking a software development role where I can use my skills in C++, Python, HTML, CSS, JavaScript,
-                React, and Java to build innovative and user-friendly products as part of a growing and learning team.
+            <h3>Web-App Developer</h3>
+            <p>Seeking a software development role where I can use my skills in C++, Flutter, Dart, JavaScript,
+                and React.js to build innovative and user-friendly products as part of a growing and learning team.
                 Pursuing engineering has helped me gain a strong foundation in computer science fundamentals and
                 software engineering best practices.I have also developed experience with a variety of programming
                 languages and technologies, including those listed above. As a front-end developer, I have experience
-                building and maintaining web applications using JS. I am also skilled in HTML, CSS, and JavaScript, and
-                I have a strong understanding of user experience (UX) and user interface (UI) design. I am eager to
-                excel as a software developer, and I am hopeful that I can make a significant contribution to any team.
+                building and maintaining web applications using React.js. I am eager to excel as a software developer, 
+                and I am hopeful that I can make a significant contribution to any team.
                 I am also a team player and I am always willing to go the extra mile to help my team succeed.</p>
             <a href="#" class="btn">Read More</a>
         </div>
@@ -154,10 +153,9 @@
                 <h3>Social Media Manager Intern</h3>
                 <h4>Derest Marketing | Feb 2022 - June 2022</h4>
                 <p>
-                    Developed marketing content such as blogs, promotional materials,
-                    and advertisements for social media. Monitored online presence of
-                    company's brand to engage with users and strengthen customer
-                    relationships.
+                    Developed 10+ profiles, promotional materials, and social media advertisements, leading to a 30% increase in
+Instagram engagement. Monitored and engaged with users to strengthen customer relationships and enhance the online presence of the
+company's brand.
                 </p>
                 <a href="https://www.linkedin.com/company/derest/about/" class="btn">Read more</a>
             </div>
@@ -165,11 +163,8 @@
                 <i class='bx bx-data'></i>
                 <h3>Documentation In-Charge</h3>
                 <h4>Students' Council of Fr.CRCE | Aug 2022- Aug 2023</h4>
-                <p>Delivered services to customer locations within specific timeframes.
-                    Worked at major Technical events throughout my course of being a
-                    member.
-                    Developed strong organizational and communication skills through
-                    coursework and volunteer activities.</p>
+                <p>Provided timely services to customers, enhancing satisfaction and efficiency. Managed major technical, cultural, and sports events and developed strong organizational and communication
+skills. Cultivated robust organizational skills through coursework and volunteer engagements. Augmented communication skills through diverse experiences.</p>
                 <a href="https://www.linkedin.com/school/fr.-conceicao-rodrigues-college-of-engineering/"
                     class="btn">Read more</a>
             </div>
