--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <a href="https://github.com/Ishan-Hegde"><i class='bx bxl-github'></i></a>
                 <a href="https://instagram.com/ishan.hegde?igshid=MzMyNGUyNmU2YQ=="><i class='bx bxl-instagram'></i></a>
                 <a href="https://www.linkedin.com/in/ishan-hegde-753947288/"><i class='bx bxl-linkedin'></i></a>
-                <a href="https://twitter.com/ishan_hegde"><i class='bx bxl-twitter'></i></a>
+                <a href="https://twitter.com/ishan_hegde"><i class='bx bxl-x'></i></a>
             </div>
             <a class="resume"
                 href="https://drive.google.com/drive/folders/1y-czppmBmvYFJ5sHursWwR1-nCktCi-f?usp=sharing">
