--- a/index.html
+++ b/index.html
@@ -178,44 +178,44 @@ skills. Cultivated robust organizational skills through coursework and volunteer
             <div class="projects-box">
                 <img src="lap.webp" alt="">
                 <div class="projects-head">
-                    <h4>Temperature Converter</h4>
+                    <h4>CRCE Connex</h4>
                     <p>
-                        One of my tasks while interning at Bharat Intern. It is a temperature converter from Celsius to
-                        Fahrenheit and Fahrenheit to Celsius as well.
+                        Crafted a robust Flutter application focused on the educational sector. It features separate interfaces for students and teachers, enabling seamless assignment submissions, customized schedules, secure transaction processing, and anonymous, engaging feedback channels. 
                     </p>
-                    <a href="https://github.com/Ishan-Hegde/BI_Temperature-Converter"><i
+                    <a href="https://github.com/Ishan-Hegde/CRCE_Connex_App"><i
                             class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="projects-box">
                 <img src="lap.webp" alt="">
                 <div class="projects-head">
-                    <h4>Exam Portal</h4>
-                    <p>Exam Portal for my college's Electronics and Computer Science branch.</p>
-                    <a href="https://github.com/Ishan-Hegde/ECS-ExamPortal"><i class='bx bx-link-external'></i></a>
+                    <h4>Voxaura</h4>
+                    <p>Flutter Voice Assistant App with ChatGPT & Dall-E AI Image Generation </p>
+                    <a href="https://github.com/Ishan-Hegde/Voxaura"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="projects-box">
                 <img src="lap.webp" alt="">
                 <div class="projects-head">
-                    <h4>Fahrenheit and Kelvin to Celsius</h4>
-                    <p>Converting temperature from Fahrenheit and Kelvin to Celcsius.</p>
-                    <a href="https://github.com/Ishan-Hegde/Fahrenheit-and-Kelvin-to-Celsius"><i
+                    <h4>Quiz App</h4>
+                    <p>A minimalist quiz app developed in Flutter using Dart. Developed as a task for Agent Insights Android Development internship opportunity.</p>
+                    <a href="https://github.com/Ishan-Hegde/quiz_app"><i
                             class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="projects-box">
                 <img src="lap.webp" alt="">
                 <div class="projects-head">
-                    <h4>Coming Soon!</h4>
-                    <p>Coming Soon!Coming Soon!</p>
+                    <h4>Temperature Converter</h4>
+                    <p>One of my tasks while interning at Bharat Intern. It is a temperature converter from Celsius to
+                        Fahrenheit and Fahrenheit to Celsius as well.</p>
                     <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="projects-box">
                 <img src="lap.webp" alt="">
                 <div class="projects-head">
-                    <h4>Coming Soon!</h4>
+                    <h4>Green Table</h4>
                     <p>Coming Soon!Coming Soon!</p>
                     <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
