--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ skills. Cultivated robust organizational skills through coursework and volunteer
         <h2 class="allheading">Recent <span>Projects</span></h2>
         <div class="projects-section">
             <div class="projects-box">
-                <img src="lap.webp" alt="">
+                <img src="CRCE Connex.png" alt="">
                 <div class="projects-head">
                     <h4>CRCE Connex</h4>
                     <p>
