--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ skills. Cultivated robust organizational skills through coursework and volunteer
                 </div>
             </div>
             <div class="projects-box">
-                <img src="lap.webp" alt="">
+                <img src="Voxaura.png" alt="">
                 <div class="projects-head">
                     <h4>Voxaura</h4>
                     <p>Flutter Voice Assistant App with ChatGPT & Dall-E AI Image Generation </p>
@@ -195,7 +195,7 @@ skills. Cultivated robust organizational skills through coursework and volunteer
                 </div>
             </div>
             <div class="projects-box">
-                <img src="lap.webp" alt="">
+                <img src="Quiz App.jpg" alt="">
                 <div class="projects-head">
                     <h4>Quiz App</h4>
                     <p>A minimalist quiz app developed in Flutter using Dart. Developed as a task for Agent Insights Android Development internship opportunity.</p>
@@ -204,7 +204,7 @@ skills. Cultivated robust organizational skills through coursework and volunteer
                 </div>
             </div>
             <div class="projects-box">
-                <img src="lap.webp" alt="">
+                <img src="temp conv.png" alt="">
                 <div class="projects-head">
                     <h4>Temperature Converter</h4>
                     <p>One of my tasks while interning at Bharat Intern. It is a temperature converter from Celsius to
@@ -213,7 +213,7 @@ skills. Cultivated robust organizational skills through coursework and volunteer
                 </div>
             </div>
             <div class="projects-box">
-                <img src="lap.webp" alt="">
+                <img src="Green table.jpg" alt="">
                 <div class="projects-head">
                     <h4>Green Table</h4>
                     <p>Coming Soon!Coming Soon!</p>
